# logistics_envs_visualizer

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/: run_server.py
backend/logviz_backend/: controller.py  input_validator.py  runner.py  schema.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: FileInput.vue  InputPreviewMap.vue  InputPreviewOrders.vue  InputPreviewServiceStations.vue  InputPreviewWorkers.vue  LiveRunDescription.vue  Map.vue  MapInfo.vue  Navbar.vue  OrderMarker.vue  OrderTable.vue  OrdersInfo.vue  PlotlyGraph.vue  RunDescription.vue  RunMetrics.vue  RunThumbnailCard.vue  ServiceStationMarker.vue  ServiceStationsInfo.vue  Sidebar.vue  WorkerMarker.vue  WorkerTable.vue  WorkersInfo.vue
frontend/src/routes/: index.ts
frontend/src/utils/: common.ts
frontend/src/views/: Home.vue  LiveMonitor.vue  NotFound.vue  RunComparison.vue  RunReport.vue  Runs.vue  Solve.vue
