[tool.poetry]
name = "logistics-envs-visualizer"
version = "0.1.0"
description = ""
authors = ["Daniil Burakov <sarrasorwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
websockets = "^12.0"
namesgenerator = "^0.3"
python-multipart = "^0.0.9"
logistics-envs = { git = "https://github.com/Sarrasor/logistics_envs.git", rev = "main" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
